--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>CSS: Layout 2</title>
+    <title>On the 40</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/reset.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/text.css" media="screen">
@@ -11,20 +12,25 @@
     <link rel="stylesheet" type="text/css" href="css/layout.css" media="screen">
   </head>
   <body>
-    
+
     <section class="heading">
-      <h1>My Site <small>to learn about CSS color and text</small></h1>
+      <h1>On the 40 <small>A news site for college students</small></h1>
     </section>
 
     <section class="main-content container_12">
       <!-- a box -->
       <div class="box grid_4">
-        <img src="http://placehold.it/350x150/f30/fff">
-        <h2><a href="#" target="_blank">A Title of a News Article</a></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet vehicula metus. Morbi ut massa porttitor, porttitor augue a, aliquet erat. Fusce ut lorem nulla. Suspendisse potenti. Integer nec ante ipsum. Nam commodo fermentum augue, at congue purus commodo in. Quisque a elit metus. Duis maximus volutpat nisl, at tempor risus pulvinar eu. Maecenas vel tincidunt odio, et viverra tellus. Vivamus congue eros enim, ut volutpat nibh fermentum at. Suspendisse accumsan ullamcorper vulputate. Aliquam erat volutpat. Quisque vehicula metus at ipsum ornare fringilla.</p>
-        <p>Curabitur mi dolor, rutrum eget tincidunt ut, molestie vel lorem. Nullam vulputate lobortis nibh sed feugiat. Nulla eu elit eu enim lacinia finibus eget eget mauris. Vestibulum massa dui, gravida et sapien eu, tincidunt condimentum odio. In hac habitasse platea dictumst. Duis lacinia lectus egestas, pharetra purus id, porta turpis. Etiam bibendum massa et viverra bibendum. Pellentesque sit amet sodales nunc. Nulla ultricies ligula in dui dapibus, vitae tincidunt justo interdum. Duis a lacus urna.</p>
-        <p>Donec consequat venenatis orci, nec aliquet est mattis et. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Quisque id nunc at tortor aliquet viverra faucibus sed eros. Nunc porta eros non euismod pulvinar. Phasellus nec vehicula augue. Etiam egestas purus eget consectetur porta. Cras condimentum mi id justo bibendum egestas. Aliquam in est a nunc dapibus dictum. Sed tellus est, luctus non dictum non, consectetur eu felis. Maecenas venenatis ligula eu odio ultrices, vel sagittis orci fringilla. Integer arcu magna, pellentesque quis mi accumsan, eleifend laoreet turpis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-        <a class="read-more" href="#" target="_blank">Read more...</a></p>
+        <img src="img/freshmanArticle.png">
+        <h2><a href="http://www.hercampus.com/life/campus-life/25-freshman-year-regrets-we-all-wish-we-could-forget" target="_blank">25 Freshman Year Regrets We All Wish We Could Forget</a></h2>
+            <p>For those of you who have experienced the trials and 
+            tribulations of being a freshman, I think we can all agree 
+            the first year of college is pretty unforgettable. You’re just 
+            getting used to the fact that you won’t be seeing your parents 
+            around every day, and suddenly you’re thrown into a world of 
+            crazy parties, stressful exams and minimal responsibilities. 
+            As we navigate this new environment, we’re bound to do a 
+            few things our older, more mature selves will one day regret. </p>
+        <a class="read-more" href="http://www.hercampus.com/life/campus-life/25-freshman-year-regrets-we-all-wish-we-could-forget" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
 
       <!-- a box -->
@@ -46,7 +52,7 @@
     </section>
 
     <section class="footer">
-      <p>Details about your site and such.</p>
+      <p>Come to this news site to check out whats going on all college campuses.</p>
     </section>
 
 
