--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="main-content container_12">
       <!-- a box -->
       <div class="box grid_4">
-        <img src="img/freshmanArticle.png">
+        <img src="http://www.meijergardens.org/assets/img/butterfly.png">
         <h2><a href="http://www.hercampus.com/life/campus-life/25-freshman-year-regrets-we-all-wish-we-could-forget" target="_blank">25 Freshman Year Regrets We All Wish We Could Forget</a></h2>
             <p>For those of you who have experienced the trials and 
             tribulations of being a freshman, I think we can all agree 
