--- a/index.html
+++ b/index.html
@@ -14,23 +14,22 @@
   <body>
 
     <section class="heading">
-      <h1>On the 40 <small>A news site for college students</small></h1>
+      <h1>Green Coffee Bean <small>Benefits of Green Coffee Bean</small></h1>
     </section>
 
     <section class="main-content container_12">
       <!-- a box -->
       <div class="box grid_4">
-        <img src="http://www.meijergardens.org/assets/img/butterfly.png" height= "150" width= "350">
-        <h2><a href="http://www.hercampus.com/life/campus-life/25-freshman-year-regrets-we-all-wish-we-could-forget" target="_blank">25 Freshman Year Regrets We All Wish We Could Forget</a></h2>
-            <p>For those of you who have experienced the trials and 
-            tribulations of being a freshman, I think we can all agree 
-            the first year of college is pretty unforgettable. You’re just 
-            getting used to the fact that you won’t be seeing your parents 
-            around every day, and suddenly you’re thrown into a world of 
-            crazy parties, stressful exams and minimal responsibilities. 
-            As we navigate this new environment, we’re bound to do a 
-            few things our older, more mature selves will one day regret. </p>
-        <a class="read-more" href="http://www.hercampus.com/life/campus-life/25-freshman-year-regrets-we-all-wish-we-could-forget" target="_blank">Read more...</a></p>
+        <img src="http://cdn-mf0.heartyhosting.com/sites/mensfitness.com/files/styles/photo_gallery_full/public/green-coffee-bean-extract-rotator.jpg?itok=Ppi7HgYl" height= "150" width= "350">
+        <h2><a href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Supplement Spotlight: Green Coffee Bean Extract</a></h2>
+            <p>Java, mud, black tea, tar, wake up juice. No matter what we call it, few of us could get by without at least one cup of coffee during our day. But while we all know about the brew’s eye-opening benefits, there’s new evidence to show that an extract from the beans may have fat-fighting potential.
+
+Where it comes from: As the name implies, “green coffee” is simply unroasted seeds—aka beans—from Coffea, the plant that gives us so many of our morning brews. Coffee contains hundreds of compounds, many of which may have healthful benefits.
+
+What it'll do for you: Green coffee bean extract has gained quite a bit of buzz recently as a weight-loss supplement. Many websites sell green coffee pills, and a major coffee company has even started selling a beverage spiked with the extract.
+
+ </p>
+        <a class="read-more" href=""http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
 
       <!-- a box -->
@@ -52,7 +51,7 @@
     </section>
 
     <section class="footer">
-      <p>Come to this news site to check out whats going on all college campuses.</p>
+      <p>Want to know more about Green Coffee Bean?</p>
     </section>
 
 
