--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>On the 40</title>
+    <title>Green Coffee Bean</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/reset.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/text.css" media="screen">
