--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@ What it'll do for you: Green coffee bean extract has gained quite a bit of buzz 
       <div class="box grid_4">
         <img src="http://placehold.it/350x150/f30/fff">
         <h2><a href="#" target="_blank">A Title of a News Article</a></h2>
-        <p>Fusce viverra molestie finibus. Maecenas eu augue vitae libero tincidunt varius. Ut velit nunc, dignissim et gravida vel, posuere et libero. Aenean luctus, libero vel porta mattis, massa odio consequat lectus, at placerat massa lacus non ligula. Pellentesque rhoncus nunc sit amet dui dapibus, ut egestas odio fermentum. Donec condimentum dapibus justo. Praesent malesuada sed metus nec posuere.
+         <p>Potential Weight Loss:
+According to a study published in March 2006 in “BMC Complementary and Alternative Medicine,” daily supplementation of an extract prepared from green coffee beans reduced body fat and body weight in mice, as well as fat composition in the liver. The effect was similar in mice supplemented with isolated chlorogenic acids and caffeine, which suggests that these are the compounds responsible for the effect. Chlorogenic acids found in green coffee can be digested and absorbed by humans, which implies a similar availability as the extract.
+
+ </p>
         <a class="read-more" href="#" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
 
