--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Where it comes from: As the name implies, “green coffee” is simply unroasted
 What it'll do for you: Green coffee bean extract has gained quite a bit of buzz recently as a weight-loss supplement. Many websites sell green coffee pills, and a major coffee company has even started selling a beverage spiked with the extract.
 
  </p>
-        <a class="read-more" href=""http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Read more...</a></p>
+       <a class="read-more" href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
 
       <!-- a box -->
