--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@ According to a study published in March 2006 in “BMC Complementary and Alterna
 
       <!-- a box -->
       <div class="box grid_4">
-        <img src="http://placehold.it/350x150/f30/fff">
-        <h2><a href="#" target="_blank">A Title of a News Article</a></h2>
-        <p>Vestibulum laoreet ultrices nisi ut ullamcorper. Aenean mattis mauris enim, ac egestas augue aliquam quis. Phasellus eget luctus arcu, sed volutpat erat. Donec laoreet condimentum elit, quis lobortis dui efficitur et. Fusce elementum bibendum felis, eu egestas lectus porttitor sit amet.
-        <a class="read-more" href="#" target="_blank">Read more...</a></p>
+        <img src="http://images.shape.mdpcdn.com/sites/shape.com/files/styles/story_detail/public/story/green-coffee-bean-extract-329x390_0.jpg?itok=AL2h_3Z9">
+        <h2><a href="http://www.shape.com/blogs/weight-loss-coach/whats-deal-green-coffee-bean-extract" target="_blank">What’s the Deal with Green Coffee Bean Extract?</a></h2>
+        <p>Throughout my career, I’ve seen dozens of “hot” weight-loss supplements come and go, including bitter orange, chromium picolinate, CLA, hoodia, yerba mate, raspberry ketones, and now green coffee bean extract. Each has been touted as an effortless way to shed pounds, by either boosting metabolism, mobilizing body fat, or suppressing appetite. But as a health professional, it’s my job to be skeptical and ask the tough questions, such as does it really work, where’s the proof, and, above all, is it safe?
+
+You may have seen green coffee extract at Starbucks, promoted as a natural energy source with no coffee flavor. It was also featured recently on The Dr. Oz Show. On his program, the doc revealed the results of his own investigation, which involved recruiting 100 women who either received a placebo or a 400 mg green coffee bean supplement. The ladies were instructed to make no changes to their diets, and after two weeks, those who had popped the green coffee bean extract lost an average of two pounds, compared to one pound for the placebo group. Interesting, but I’m not ready to recommend it yet. Here’s the nitty-gritty:
+        <a class="read-more" href="http://www.shape.com/blogs/weight-loss-coach/whats-deal-green-coffee-bean-extract" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
 
     </section>
