--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
 
     <section class="heading">
-      <h1>Green Coffee Bean <small>Benefits of Green Coffee Bean</small></h1>
+      <h1>Green Coffee Bean <small>Trying to lose weight?: Benefits of Green Coffee Bean</small></h1>
     </section>
 
     <section class="main-content container_12">
