--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@ According to a study published in March 2006 in “BMC Complementary and Alterna
         <p>Throughout my career, I’ve seen dozens of “hot” weight-loss supplements come and go, including bitter orange, chromium picolinate, CLA, hoodia, yerba mate, raspberry ketones, and now green coffee bean extract. Each has been touted as an effortless way to shed pounds, by either boosting metabolism, mobilizing body fat, or suppressing appetite. But as a health professional, it’s my job to be skeptical and ask the tough questions, such as does it really work, where’s the proof, and, above all, is it safe?
         <a class="read-more" href="http://www.shape.com/blogs/weight-loss-coach/whats-deal-green-coffee-bean-extract" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
+      
+       <!-- a box -->
+      <div class="box grid_4">
+        <img src="http://cdn-mf0.heartyhosting.com/sites/mensfitness.com/files/styles/photo_gallery_full/public/green-coffee-bean-extract-rotator.jpg?itok=Ppi7HgYl" height= "150" width= "350">
+        <h2><a href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Supplement Spotlight: Green Coffee Bean Extract</a></h2>
+            <p>Java, mud, black tea, tar, wake up juice. No matter what we call it, few of us could get by without at least one cup of coffee during our day. But while we all know about the brew’s eye-opening benefits, there’s new evidence to show that an extract from the beans may have fat-fighting potential.
+
+Where it comes from: As the name implies, “green coffee” is simply unroasted seeds—aka beans—from Coffea, the plant that gives us so many of our morning brews. Coffee contains hundreds of compounds, many of which may have healthful benefits.
+
+What it'll do for you: Green coffee bean extract has gained quite a bit of buzz recently as a weight-loss supplement. Many websites sell green coffee pills, and a major coffee company has even started selling a beverage spiked with the extract.
+
+ </p>
+       <a class="read-more" href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Read more...</a></p>
+      </div> <!-- end box -->
 
     </section>
 
