--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 Where it comes from: As the name implies, “green coffee” is simply unroasted seeds—aka beans—from Coffea, the plant that gives us so many of our morning brews. Coffee contains hundreds of compounds, many of which may have healthful benefits.
 
-What it'll do for you: Green coffee bean extract has gained quite a bit of buzz recently as a weight-loss supplement. Many websites sell green coffee pills, and a major coffee company has even started selling a beverage spiked with the extract.
+What it'll do for you: Green coffee bean extract has gained quite a bit of buzz...
 
  </p>
        <a class="read-more" href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Read more...</a></p>
