--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ According to a study published in March 2006 in “BMC Complementary and Alterna
       <div class="box grid_4">
         <img src="http://www.newsmax.com/Newsmax/files/cf/cf0d7389-d21e-4605-9d69-64cfeb0fef74.jpg">
         <h2><a href="http://www.shape.com/blogs/weight-loss-coach/whats-deal-green-coffee-bean-extract" target="_blank">What’s the Deal with Green Coffee Bean Extract?</a></h2>
-        <p>Throughout my career, I’ve seen dozens of “hot” weight-loss supplements come and go, including bitter orange, chromium picolinate, CLA, hoodia, yerba mate, raspberry ketones, and now green coffee bean extract. Each has been touted as an effortless way to shed pounds, by either boosting metabolism, mobilizing body fat, or suppressing appetite. But as a health professional, it’s my job to be skeptical and ask the tough questions, such as does it really work, where’s the proof, and, above all, is it safe?You may have seen green coffee extract at Starbucks, promoted as a natural energy source with no coffee flavor. 
+        <p>Throughout my career, I’ve seen dozens of “hot” weight-loss supplements come and go, including bitter orange, chromium picolinate, CLA, hoodia, yerba mate, raspberry ketones, and now green coffee bean extract. Each has been touted as an effortless way to shed pounds, by either boosting metabolism, mobilizing body fat, or suppressing appetite. But as a health professional, it’s my job to be skeptical and ask the tough questions, such as does it really work, where’s the proof, and, above all, is it safe?You may have seen green coffee extract at Starbucks, promoted as a natural energy source with no coffee flavor.It was also featured recently on The Dr. Oz Show. 
         <a class="read-more" href="http://www.shape.com/blogs/weight-loss-coach/whats-deal-green-coffee-bean-extract" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
       
@@ -66,16 +66,28 @@ What it'll do for you: Green coffee bean extract has gained quite a bit of buzz 
       </div> <!-- end box -->
    <!-- a box -->
       <div class="box grid_4">
-        <img src="http://cdn-mf0.heartyhosting.com/sites/mensfitness.com/files/styles/photo_gallery_full/public/green-coffee-bean-extract-rotator.jpg?itok=Ppi7HgYl" height= "150" width= "350">
-        <h2><a href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Supplement Spotlight: Green Coffee Bean Extract</a></h2>
-            <p>Java, mud, black tea, tar, wake up juice. No matter what we call it, few of us could get by without at least one cup of coffee during our day. But while we all know about the brew’s eye-opening benefits, there’s new evidence to show that an extract from the beans may have fat-fighting potential.
+        <img src="http://www.fitday.com/fitness-articles/11_GreenCoffee02.jpg" >
+        <h2><a href="https://authoritynutrition.com/green-coffee-bean-extract-review/" target="_blank">Does Green Coffee Bean Extract Work? A Detailed Review</a></h2>
+            <p>JLosing weight can be incredibly difficult.
 
-Where it comes from: As the name implies, “green coffee” is simply unroasted seeds—aka beans—from Coffea, the plant that gives us so many of our morning brews. Coffee contains hundreds of compounds, many of which may have healthful benefits.
+For this reason, people have turned to all sorts of supplements in order to make things easier.
 
-What it'll do for you: Green coffee bean extract has gained quite a bit of buzz recently as a weight-loss supplement. Many websites sell green coffee pills, and a major coffee company has even started selling a beverage spiked with the extract.
+Green Coffee Bean Extract is one of them…. it is currently among the world’s most popular weight loss supplements.
+
+As the name implies, this supplement is extracted from green coffee beans.
+
+It contains a substance called Chlorogenic Acid, which is believed to be responsible for the weight loss effects.
+
+Green coffee extract was promoted by Dr. Oz back in 2012. He is an American TV doctor and probably the most famous health “guru” in the world.
+
+I’m a big fan of supplements in general, but I am extra skeptical when it comes to weight loss supplements because they almost never work as advertised.
+
+This article takes a detailed look at Green Coffee Bean Extract… what it is, how it works and what the science has to say about it.
+
+
 
  </p>
-       <a class="read-more" href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Read more...</a></p>
+       <a class="read-more" href="https://authoritynutrition.com/green-coffee-bean-extract-review/" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
     <!-- a box -->
       <div class="box grid_4">
