--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ What it'll do for you: Green coffee bean extract has gained quite a bit of buzz 
       <div class="box grid_4">
         <img src="http://www.fitday.com/fitness-articles/11_GreenCoffee02.jpg" >
         <h2><a href="https://authoritynutrition.com/green-coffee-bean-extract-review/" target="_blank">Does Green Coffee Bean Extract Work? A Detailed Review</a></h2>
-            <p>JLosing weight can be incredibly difficult.
+            <p>Losing weight can be incredibly difficult.
 
 For this reason, people have turned to all sorts of supplements in order to make things easier.
 
