--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <section class="heading">
       <h1>Green Coffee Bean <small>Trying To Lose Weight?: Benefits of Green Coffee Bean</small></h1>
     </section>
-
+<h3><p>Green coffee beans are coffee beans that have not been roasted. Roasting green coffee beans not only changes the color of the coffee beans but also removes a compound called chlorogenic acid. It’s chlorogenic acid that is at the heart of green coffee bean weight loss claims. </p></h3>
+    
     <section class="main-content container_12">
       <!-- a box -->
       <div class="box grid_4">
