--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="heading">
       <h1>Green Coffee Bean <small>Trying To Lose Weight?: Benefits of Green Coffee Bean</small></h1>
     </section>
-<center><h6><p>Green coffee beans are coffee beans that have not been roasted. Roasting green coffee beans not only changes the color of the coffee beans but also removes a compound called chlorogenic acid. It’s chlorogenic acid that is at the heart of green coffee bean weight loss claims. When supplements contain “green coffee bean extract”, chlorogenic acid is the extract they are referring to. Like many plant chemicals, chlorogenic acid also has antioxidant properties. Another extract of green coffee beans that is probably also used in supplements is caffeine.</p></h6></center>
+<center><h6><p>Green coffee beans are coffee beans that have not been roasted. Roasting green coffee beans not only changes the color of the coffee beans but also removes a compound called chlorogenic acid. It’s chlorogenic acid that is at the heart of green coffee bean weight loss claims. When supplements contain “green coffee bean extract”, chlorogenic acid is the extract they are referring to. Like many plant chemicals, chlorogenic acid also has antioxidant properties.</p></h6></center>
     
     <section class="main-content container_12">
       <!-- a box -->
