--- a/index.html
+++ b/index.html
@@ -67,28 +67,16 @@ What it'll do for you: Green coffee bean extract has gained quite a bit of buzz 
       </div> <!-- end box -->
    <!-- a box -->
       <div class="box grid_4">
-        <img src="http://www.fitday.com/fitness-articles/11_GreenCoffee02.jpg" >
-        <h2><a href="https://authoritynutrition.com/green-coffee-bean-extract-review/" target="_blank">Does Green Coffee Bean Extract Work? A Detailed Review</a></h2>
-            <p>Losing weight can be incredibly difficult.
+        <img src=http://lh4.googleusercontent.com/-Fq6feIoAI4c/AAAAAAAAAAI/AAAAAAAAAPg/qjWt5TwIULY/photo.jpg" >
+        <h2><a href="http://www.burmancoffee.com/" target="_blank">Where to get green coffe beans: Burman Coffee Beans</a></h2>
+            <p>Home Coffee Roasting using the world's finest green coffee beans is our passion here at Burman Coffee Traders. We believe the key to great coffee is fresh green coffee beans and the ability to roast our coffee at home just the way we like it.
 
-For this reason, people have turned to all sorts of supplements in order to make things easier.
-
-Green Coffee Bean Extract is one of them…. it is currently among the world’s most popular weight loss supplements.
-
-As the name implies, this supplement is extracted from green coffee beans.
-
-It contains a substance called Chlorogenic Acid, which is believed to be responsible for the weight loss effects.
-
-Green coffee extract was promoted by Dr. Oz back in 2012. He is an American TV doctor and probably the most famous health “guru” in the world.
-
-I’m a big fan of supplements in general, but I am extra skeptical when it comes to weight loss supplements because they almost never work as advertised.
-
-This article takes a detailed look at Green Coffee Bean Extract… what it is, how it works and what the science has to say about it.
+Home Coffee Roasting provides a simple way to enjoy the aromas and tastes of freshly roasted, super premium, gourmet coffees. Think of the wonderful flavor and smell of fresh bread right from a bread maker, compared to that of store bought bread. Fresh roasted coffee provides a similar experience. Roasted coffee stales very quickly and is dramatically diminished in days, so home coffee roasting ensures your coffee is always fresh.
 
 
 
  </p>
-       <a class="read-more" href="https://authoritynutrition.com/green-coffee-bean-extract-review/" target="_blank">Read more...</a></p>
+       <a class="read-more" href="http://www.burmancoffee.com/" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
     <!-- a box -->
       <div class="box grid_4">
