--- a/index.html
+++ b/index.html
@@ -80,16 +80,13 @@ Home Coffee Roasting provides a simple way to enjoy the aromas and tastes of fre
       </div> <!-- end box -->
     <!-- a box -->
       <div class="box grid_4">
-        <img src="http://cdn-mf0.heartyhosting.com/sites/mensfitness.com/files/styles/photo_gallery_full/public/green-coffee-bean-extract-rotator.jpg?itok=Ppi7HgYl" height= "150" width= "350">
-        <h2><a href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Supplement Spotlight: Green Coffee Bean Extract</a></h2>
+        <img src="http://media.webcollage.net/rwvfp/wc/cp/13000348/module/iovate/_cp/products/1391546285500/tab-588ff508-a5a4-4b6f-9832-bdbd088a1934/resource-fd86dad0-69d3-4d42-92df-d51874280cc8.jpg.w960.jpg" height= "150" width= "350">
+        <h2><a href="http://www.purelyinspired.com/products/green-coffee-bean/" target="_blank">Purely Inspired Green Coffee Bean</a></h2>
             <p>Java, mud, black tea, tar, wake up juice. No matter what we call it, few of us could get by without at least one cup of coffee during our day. But while we all know about the brew’s eye-opening benefits, there’s new evidence to show that an extract from the beans may have fat-fighting potential.
 
-Where it comes from: As the name implies, “green coffee” is simply unroasted seeds—aka beans—from Coffea, the plant that gives us so many of our morning brews. Coffee contains hundreds of compounds, many of which may have healthful benefits.
-
-What it'll do for you: Green coffee bean extract has gained quite a bit of buzz recently as a weight-loss supplement. Many websites sell green coffee pills, and a major coffee company has even started selling a beverage spiked with the extract.
-
+Purely Inspired Green Coffee Bean has been scientifically dosed with 400 milligrams of green coffee bean extract (supplying 45 percent chlorogenic acids) with no proprietary blends. You can lose weight with help from Green Coffee Bean added to your diet and exercise plan. Green coffee has been shown in scientific research to help subjects lose weight.
  </p>
-       <a class="read-more" href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Read more...</a></p>
+       <a class="read-more" href="http://www.purelyinspired.com/products/green-coffee-bean/" target="_blank">Read more...</a></p>
       </div> <!-- end box -->   
 
     </section>
