--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Home Coffee Roasting provides a simple way to enjoy the aromas and tastes of fre
 Purely Inspired Green Coffee Bean has been scientifically dosed with 400 milligrams of green coffee bean extract (supplying 45 percent chlorogenic acids) with no proprietary blends. You can lose weight with help from Green Coffee Bean added to your diet and exercise plan. Green coffee has been shown in scientific research to help subjects lose weight.Scientifically dosed with 200mg of green coffee bean extract, supplying 45% chlorogenic acids- a key ingredient which has been shown in scientific research to help subjects lose weight.
 Contains no proprietary blends,
 100% premium ingredients, and
-Non-stimulant
+Non-stimulant...
 
  </p>
        <a class="read-more" href="http://www.purelyinspired.com/products/green-coffee-bean/" target="_blank">Read more...</a></p>
