--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ According to a study published in March 2006 in “BMC Complementary and Alterna
         <a class="read-more" href="http://www.shape.com/blogs/weight-loss-coach/whats-deal-green-coffee-bean-extract" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
       
+ <center><h6><p>Want to purchase Green Coffee Beans? Here are some trustworthy companies!</p></h6></center>     
+      
        <!-- a box -->
       <div class="box grid_4">
         <img src="http://cdn-mf0.heartyhosting.com/sites/mensfitness.com/files/styles/photo_gallery_full/public/green-coffee-bean-extract-rotator.jpg?itok=Ppi7HgYl" height= "150" width= "350">
