--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ According to a study published in March 2006 in “BMC Complementary and Alterna
       <div class="box grid_4">
         <img src="http://www.newsmax.com/Newsmax/files/cf/cf0d7389-d21e-4605-9d69-64cfeb0fef74.jpg">
         <h2><a href="http://www.shape.com/blogs/weight-loss-coach/whats-deal-green-coffee-bean-extract" target="_blank">What’s the Deal with Green Coffee Bean Extract?</a></h2>
-        <p>Throughout my career, I’ve seen dozens of “hot” weight-loss supplements come and go, including bitter orange, chromium picolinate, CLA, hoodia, yerba mate, raspberry ketones, and now green coffee bean extract. Each has been touted as an effortless way to shed pounds, by either boosting metabolism, mobilizing body fat, or suppressing appetite. But as a health professional, it’s my job to be skeptical and ask the tough questions, such as does it really work, where’s the proof, and, above all, is it safe?You may have seen green coffee extract at Starbucks, promoted as a natural energy source with no coffee flavor.It was also featured recently on The Dr. Oz Show. 
+        <p>Throughout my career, I’ve seen dozens of “hot” weight-loss supplements come and go, including bitter orange, chromium picolinate, CLA, hoodia, yerba mate, raspberry ketones, and now green coffee bean extract. Each has been touted as an effortless way to shed pounds, by either boosting metabolism, mobilizing body fat, or suppressing appetite. But as a health professional, it’s my job to be skeptical and ask the tough questions, such as does it really work, where’s the proof, and, above all, is it safe?You may have seen green coffee extract at Starbucks
         <a class="read-more" href="http://www.shape.com/blogs/weight-loss-coach/whats-deal-green-coffee-bean-extract" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
       
@@ -82,7 +82,7 @@ Home Coffee Roasting provides a simple way to enjoy the aromas and tastes of fre
       </div> <!-- end box -->
     <!-- a box -->
       <div class="box grid_4">
-        <img src="http://media.webcollage.net/rwvfp/wc/cp/13000348/module/iovate/_cp/products/1391546285500/tab-588ff508-a5a4-4b6f-9832-bdbd088a1934/resource-fd86dad0-69d3-4d42-92df-d51874280cc8.jpg.w960.jpg" height= "150" width= "350">
+        <img src="http://images10.newegg.com/NeweggFlash/ProductImage1280/9SIA3P11AV9137-001.jpg" height= "150" width= "350">
         <h2><a href="http://www.purelyinspired.com/products/green-coffee-bean/" target="_blank">Purely Inspired Green Coffee Bean</a></h2>
             <p>
 
