--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ According to a study published in March 2006 in “BMC Complementary and Alterna
         <p>Throughout my career, I’ve seen dozens of “hot” weight-loss supplements come and go, including bitter orange, chromium picolinate, CLA, hoodia, yerba mate, raspberry ketones, and now green coffee bean extract. Each has been touted as an effortless way to shed pounds, by either boosting metabolism, mobilizing body fat, or suppressing appetite. But as a health professional, it’s my job to be skeptical and ask the tough questions, such as does it really work, where’s the proof, and, above all, is it safe?You may have seen green coffee extract at Starbucks. promoted as a natural energy source with no coffee flavor. It was also featured recently on The Dr. Oz... 
         <a class="read-more" href="http://www.shape.com/blogs/weight-loss-coach/whats-deal-green-coffee-bean-extract" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
-      
- <center><h6><p>Want to purchase Green Coffee Beans? Here are some trustworthy companies!</p></h6></center>     
+      <hr>
+ <center><h6><p>Want to purchase Green Coffee Beans? Here are some trustworthy companies!</p></h6></center>   </hr>  
       
        <!-- a box -->
       <div class="box grid_4">
