--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@ Non-stimulant...
 
  </p>
        <a class="read-more" href="http://www.purelyinspired.com/products/green-coffee-bean/" target="_blank">Read more...</a></p>
-      </div> <!-- end box -->   
+      </div> <!-- end box --> 
+      
+      <hr>
+ <center><h6><p>Want to purchase Green Coffee Beans? Here are some trustworthy companies!</p></h6></center>   </hr>  
 
     </section>
 
