--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Home Coffee Roasting provides a simple way to enjoy the aromas and tastes of fre
       </div> <!-- end box -->
     <!-- a box -->
       <div class="box grid_4">
-        <img src=http://media.webcollage.net/rwvfp/wc/cp/19689665/module/iovate/_cp/products/1391546358243/tab-11799361-c7cf-4736-b572-ccec9532dbac/76959b56-d4e6-430d-997b-e69b763ef278.png.w240.jpg" height= "150" width= "350">
+        <img src=http://ecdn.liveclicker.net/0079A8/cdn/thumbnails/31/1045802807_1_Flv_320x180_padding_9.jpg" height= "150" width= "350">
         <h2><a href="http://www.purelyinspired.com/products/green-coffee-bean/" target="_blank">Purely Inspired Green Coffee Bean</a></h2>
             <p>
 
