--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ What it'll do for you: Green coffee bean extract has gained quite a bit of buzz 
       </div> <!-- end box -->
    <!-- a box -->
       <div class="box grid_4">
-        <img src=http://lh4.googleusercontent.com/-Fq6feIoAI4c/AAAAAAAAAAI/AAAAAAAAAPg/qjWt5TwIULY/photo.jpg" >
+        <img src="http://lh4.googleusercontent.com/-Fq6feIoAI4c/AAAAAAAAAAI/AAAAAAAAAPg/qjWt5TwIULY/photo.jpg" >
         <h2><a href="http://www.burmancoffee.com/" target="_blank">Where to get green coffe beans: Burman Coffee Beans</a></h2>
             <p>Home Coffee Roasting using the world's finest green coffee beans is our passion here at Burman Coffee Traders. We believe the key to great coffee is fresh green coffee beans and the ability to roast our coffee at home just the way we like it.
 
@@ -82,7 +82,7 @@ Home Coffee Roasting provides a simple way to enjoy the aromas and tastes of fre
       </div> <!-- end box -->
     <!-- a box -->
       <div class="box grid_4">
-        <img src="http://media.webcollage.net/rwvfp/wc/cp/19689793/module/iovate/_cp/products/1391546285500/tab-a18f6bf1-c49a-42ab-9a7b-31ff13d0a89f/c7acfcc5-3af7-4a87-afa4-330eeb31dcd1.png.w240.jpg" height= "150" width= "350">
+        <img src="http://media.webcollage.net/rwvfp/wc/cp/19689793/module/iovate/_cp/products/1391546285500/tab-a18f6bf1-c49a-42ab-9a7b-31ff13d0a89f/c7acfcc5-3af7-4a87-afa4-330eeb31dcd1.png.w240.jpg">
         <h2><a href="http://www.purelyinspired.com/products/green-coffee-bean/" target="_blank">Purely Inspired Green Coffee Bean</a></h2>
             <p>
 
