--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Home Coffee Roasting provides a simple way to enjoy the aromas and tastes of fre
       </div> <!-- end box -->
     <!-- a box -->
       <div class="box grid_4">
-        <img src="http://media.webcollage.net/rwvfp/wc/cp/19689793/module/iovate/_cp/products/1391546285500/tab-a18f6bf1-c49a-42ab-9a7b-31ff13d0a89f/c7acfcc5-3af7-4a87-afa4-330eeb31dcd1.png.w240.jpg">
+        <img src="http://images10.newegg.com/NeweggFlash/ProductImage1280/9SIA3P11AV9137-001.jpg">
         <h2><a href="http://www.purelyinspired.com/products/green-coffee-bean/" target="_blank">Purely Inspired Green Coffee Bean</a></h2>
             <p>
 
