--- a/index.html
+++ b/index.html
@@ -100,16 +100,12 @@ Non-stimulant...
 
     <!-- a box -->
       <div class="box grid_4">
-       <iframe width="270" height="150" src="https://www.youtube.com/embed/KoYgpuG87lQ" frameborder="0" allowfullscreen></iframe>
-        <h2><a href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Supplement Spotlight: Green Coffee Bean Extract</a></h2>
-            <p>Java, mud, black tea, tar, wake up juice. No matter what we call it, few of us could get by without at least one cup of coffee during our day. But while we all know about the brew’s eye-opening benefits, there’s new evidence to show that an extract from the beans may have fat-fighting potential.
-
-Where it comes from: As the name implies, “green coffee” is simply unroasted seeds—aka beans—from Coffea, the plant that gives us so many of our morning brews. Coffee contains hundreds of compounds, many of which may have healthful benefits.
-
-What it'll do for you: Green coffee bean extract has gained quite a bit of buzz recently as a weight-loss supplement. Many websites sell green coffee pills, and a major coffee company has even started selling a beverage spiked with the extract.It was also featured recently on The Dr. Oz...
+       <iframe width="265" height="150" src="https://www.youtube.com/embed/KoYgpuG87lQ" frameborder="0" allowfullscreen></iframe>
+        <h2><a href="https://www.youtube.com/watch?v=KoYgpuG87lQ" target="_blank">Weight Loss, Metabolism and Green Coffee Bean Extracts Dr Ken and Dr OZ on ABC News</a></h2>
+            <p>Dr OZ & Dr. Ken Grey Holistic Physician on Green Coffee Bean Extract as seen on ABC News channel 25.
 
  </p>
-       <a class="read-more" href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Read more...</a></p>
+       <a class="read-more" href="https://www.youtube.com/watch?v=KoYgpuG87lQ" target="_blank">Watch more...</a></p>
       </div> <!-- end box -->
   
   
