--- a/index.html
+++ b/index.html
@@ -109,18 +109,15 @@ Non-stimulant...
       </div> <!-- end box -->
   
   
-   <!-- a box -->
+  <!-- a box -->
       <div class="box grid_4">
-        <img src="http://lh4.googleusercontent.com/-Fq6feIoAI4c/AAAAAAAAAAI/AAAAAAAAAPg/qjWt5TwIULY/photo.jpg" >
-        <h2><a href="http://www.burmancoffee.com/" target="_blank">Where to get green coffe beans: Burman Coffee Beans</a></h2>
-            <p>Home Coffee Roasting using the world's finest green coffee beans is our passion here at Burman Coffee Traders. We believe the key to great coffee is fresh green coffee beans and the ability to roast our coffee at home just the way we like it.
-
-Home Coffee Roasting provides a simple way to enjoy the aromas and tastes of freshly roasted, super premium, gourmet coffees. Think of the wonderful flavor and smell of fresh bread right from a bread maker, compared to that of store bought bread. Fresh roasted coffee provides a similar experience. Roasted coffee stales very quickly and is dramatically diminished in days, so home coffee roasting ensures your coffee is always fresh.
-
-
+       <iframe width="265" height="150" src="https://www.youtube.com/embed/2-jWRQlv2TE" frameborder="0" allowfullscreen></iframe>
+        <h2><a href="https://www.youtube.com/watch?v=2-jWRQlv2TE" target="_blank"Pure Green Coffee Bean Extract Reviews - Does Green Coffee Bean Extract Really Work for Weight Loss?</a></h2>
+            <p>Green Coffee Bean Extract - Is It Really Effective for Weight Loss?
+Pure Green Coffee Bean Extract works effectively for weight loss. 
 
  </p>
-       <a class="read-more" href="http://www.burmancoffee.com/" target="_blank">Read more...</a></p>
+       <a class="read-more" href="https://www.youtube.com/embed/2-jWRQlv2TE" target="_blank">Watch more...</a></p>
       </div> <!-- end box -->
     
     
