--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Non-stimulant...
   <!-- a box -->
       <div class="box grid_4">
        <iframe width="265" height="150" src="https://www.youtube.com/embed/2-jWRQlv2TE" frameborder="0" allowfullscreen></iframe>
-        <h2><a href="https://www.youtube.com/watch?v=2-jWRQlv2TE" target="_blank"Pure Green Coffee Bean Extract Reviews - Does Green Coffee Bean Extract Really Work for Weight Loss?</a></h2>
+        <h2><a href="https://www.youtube.com/watch?v=2-jWRQlv2TE" target="_blank">Pure Green Coffee Bean Extract Reviews - Does Green Coffee Bean Extract Really Work for Weight Loss?</a></h2>
             <p>Green Coffee Bean Extract - Is It Really Effective for Weight Loss?
 Pure Green Coffee Bean Extract works effectively for weight loss. 
 
