--- a/index.html
+++ b/index.html
@@ -56,16 +56,11 @@ According to a study published in March 2006 in “BMC Complementary and Alterna
       
        <!-- a box -->
       <div class="box grid_4">
-        <img src="http://cdn-mf0.heartyhosting.com/sites/mensfitness.com/files/styles/photo_gallery_full/public/green-coffee-bean-extract-rotator.jpg?itok=Ppi7HgYl" height= "150" width= "350">
-        <h2><a href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Supplement Spotlight: Green Coffee Bean Extract</a></h2>
-            <p>Java, mud, black tea, tar, wake up juice. No matter what we call it, few of us could get by without at least one cup of coffee during our day. But while we all know about the brew’s eye-opening benefits, there’s new evidence to show that an extract from the beans may have fat-fighting potential.
-
-Where it comes from: As the name implies, “green coffee” is simply unroasted seeds—aka beans—from Coffea, the plant that gives us so many of our morning brews. Coffee contains hundreds of compounds, many of which may have healthful benefits.
-
-What it'll do for you: Green coffee bean extract has gained quite a bit of buzz recently as a weight-loss supplement. Many websites sell green coffee pills, and a major coffee company has even started selling a beverage spiked with the extract.It was also featured recently on The Dr. Oz...
-
+        <img src="http://www.u-roast-em.com/support/URoastEmLogo.jpg" height= "150" width= "350">
+        <h2><a href="http://www.u-roast-em.com/" target="_blank">Green Coffee Beans</a></h2>
+            <p>We are the "no frills" green and roasted coffee bean supplier you can feel good about. We have been in the specialty coffee business for over 25 years, founding member of SCAA (Specialty Coffee Association of America) and long time advocate to the commitment of quality. We now focus on selling green coffee beans and home roasting supplies. We have gotten to know most of the brokers and importers over the years and have a good relationship with them. They know we cup test all of the coffee we purchase and send us only the best. I know you will be happy with the quality of bean, speed of delivery and prices. View our green coffee beans and home roasting supplies for our current offerings.
  </p>
-       <a class="read-more" href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Read more...</a></p>
+       <a class="read-more" href="http://www.u-roast-em.com/" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
    <!-- a box -->
       <div class="box grid_4">
