--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ According to a study published in March 2006 in “BMC Complementary and Alterna
       
        <!-- a box -->
       <div class="box grid_4">
-        <img src="http://www.u-roast-em.com/support/URoastEmLogo.jpg" height= "150" width= "350">
+        <img src="http://www.u-roast-em.com/support/URoastEmLogo.jpg">
         <h2><a href="http://www.u-roast-em.com/" target="_blank">Green Coffee Beans</a></h2>
             <p>We are the "no frills" green and roasted coffee bean supplier you can feel good about. We have been in the specialty coffee business for over 25 years, founding member of SCAA (Specialty Coffee Association of America) and long time advocate to the commitment of quality. We now focus on selling green coffee beans and home roasting supplies. We have gotten to know most of the brokers and importers over the years and have a good relationship with them. They know we cup test all of the coffee we purchase and send us only the best. I know you will be happy with the quality of bean, speed of delivery and prices. View our green coffee beans and home roasting supplies for our current offerings.
  </p>
