--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="main-content container_12">
       <!-- a box -->
       <div class="box grid_4">
-        <img src="http://cdn-mf0.heartyhosting.com/sites/mensfitness.com/files/styles/photo_gallery_full/public/green-coffee-bean-extract-rotator.jpg?itok=Ppi7HgYl" height= "150" width= "350">
+        <img src="http://cdn-mf0.heartyhosting.com/sites/mensfitness.com/files/styles/photo_gallery_full/public/green-coffee-bean-extract-rotator.jpg?itok=Ppi7HgYl" >
         <h2><a href="http://www.mensfitness.com/nutrition/supplements/supplement-spotlight-green-coffee-bean-extract" target="_blank">Supplement Spotlight: Green Coffee Bean Extract</a></h2>
             <p>Java, mud, black tea, tar, wake up juice. No matter what we call it, few of us could get by without at least one cup of coffee during our day. But while we all know about the brew’s eye-opening benefits, there’s new evidence to show that an extract from the beans may have fat-fighting potential.
 
