--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ According to a study published in March 2006 in “BMC Complementary and Alterna
         <a class="read-more" href="http://www.shape.com/blogs/weight-loss-coach/whats-deal-green-coffee-bean-extract" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
       <hr>
- <center><h6><p>Want to purchase Green Coffee Beans? Here are some trustworthy companies!</p></h6></center>   </hr>  
+ <font color=#59B89A><center><h6><p>Want to purchase Green Coffee Beans? Here are some trustworthy companies!</p></h6></center>   </hr>  </font>
       
        <!-- a box -->
       <div class="box grid_4">
