--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Non-stimulant...
       </div> <!-- end box --> 
       
       <hr>
- <center><h6><p>Green Coffee Bean in the Media</p></h6></center>   </hr>  
+ <font color=#59B89A><center><h6><p>Green Coffee Bean in the Media</p></h6></center>   </hr>  </font>
 
     <!-- a box -->
       <div class="box grid_4">
