--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Pure Green Coffee Bean Extract works effectively for weight loss.
      <iframe width="265" height="150" src="https://www.youtube.com/embed/VIvWxwLt5Xs" frameborder="0" allowfullscreen></iframe>
         <h2><a href="https://www.youtube.com/watch?v=VIvWxwLt5Xs" target="_blank">Does Green Coffee Bean Extract Work? Detailed Review</a></h2>
             <p>Does Green Coffee Bean Extract Work? Detailed Review. Benefits of Max Green Coffee Bean Extract; - Fast weight loss
-Weight loss will be faster - naturally. And along with weight loss green coffee bean helps will getting rid of belly fat, fat loss, cellulite reduction, as most people do notice their bellies getting trimmer and tighter.
+Weight loss will be faster - naturally. And along with weight loss green coffee bean helps will getting rid of belly fat...
 
  </p>
        <a class="read-more" href="https://www.youtube.com/watch?v=VIvWxwLt5Xs" target="_blank">Watch more...</a></p>
